--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <img src="assets/images/logogeneral.webp" alt="Cumbre 200" title="Cumbre 200" class="imagen-2">
 
             <div class="contenedor-universal" style="margin-top: 10px;">
-                <p class="parrafo-3" style="font-weight: 400;">Gracias por haber formado parte de la CUMBRE 200, te esperamos el próximo año</p>
+                <h2 class="parrafo-3" style="font-weight: 400;">Gracias por haber formado parte de la CUMBRE 200, te esperamos el próximo año</h2>
                 <a href="pages/encuesta.html" class="boton-1">RESPONDER ENCUESTA</a>
             </div>
 
