--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="agenda-2" style="margin: 50px 0px;">
                 <div class="agenda-borde" style="position: relative; grid-gap: 25px 25px;">
                     <div class="contenedor-universal">
-                        <img src="../assets/images/logogeneral-2.webp" alt="CUMBRE 200" title="CUMBRE 200" class="imagen-6">
+                        <img src="assets/images/logogeneral-2.webp" alt="CUMBRE 200" title="CUMBRE 200" class="imagen-6">
                     </div>
                     <form action="https://php.embluemail.com/Integraciones/form_events/emblue_events.php" method="POST" class="formulario">
                         <div class="contenedor-universal">
